# CustomCNN

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  tests.cpp
Layers/: Concat.cpp  Concat.h  Dense.cpp  Dense.h  ElementwiseAdd.cpp  ElementwiseAdd.h  Layer.h  ReLU.cpp  ReLU.h
core/: Im2Col.cpp  Im2Col.h  Tensor.cpp  Tensor.h
include/MetalNet/: MetalNet.h
include/MetalNet/Layers/: BatchNorm2D.h  Concat.h  Conv2D.h  Dense.h  Dropout.h  ElementwiseAdd.h  Flatten.h  FusedConvBNReLU.h  Layer.h  LeakyReLU.h  MaxPool2D.h  ReLU.h  Sigmoid.h  Softmax.h
include/MetalNet/core/: Im2Col.h  Tensor.h
include/MetalNet/data/: DataLoader.h  Dataset.h
include/MetalNet/nn/: Adam.h  Loss.h  Model.h  Optimizer.h
nn/: Adam.cpp  Adam.h  Loss.cpp  Model.cpp  Model.h  Optimizer.cpp  Optimizer.h
scripts/: run.ps1
